<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.myapplication.utils.JNTextViewBold
            android:id="@+id/tv_register_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_header_image"
            android:paddingStart="@dimen/toolbar_title_padding_start"
            android:paddingBottom="0dp"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_text_size">
        </com.example.myapplication.utils.JNTextViewBold>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:hint="@string/et_first_name"
                android:textColorHint="@color/colorPrimaryText">
                <com.example.myapplication.utils.JNEditTextBold
                    android:id="@+id/et_first_name"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="David">
                </com.example.myapplication.utils.JNEditTextBold>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_first_name"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:hint="@string/et_last_name"
                android:textColorHint="@color/colorPrimaryText">
                <com.example.myapplication.utils.JNEditTextBold
                    android:id="@+id/et_last_name"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="Knaggs">
                </com.example.myapplication.utils.JNEditTextBold>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_last_name"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:hint="@string/et_hint_email"
                android:textColorHint="@color/colorPrimaryText">

                <com.example.myapplication.utils.JNEditTextBold
                    android:id="@+id/et_email"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="example@gmail.com">
                </com.example.myapplication.utils.JNEditTextBold>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:hint="@string/et_hint_password"
                android:textColorHint="@color/colorPrimaryText">

                <com.example.myapplication.utils.JNEditTextBold
                    android:id="@+id/et_password"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="123456">
                </com.example.myapplication.utils.JNEditTextBold>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                android:layout_marginTop="15dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:hint="@string/et_confirm_password"
                android:textColorHint="@color/colorPrimaryText">
                <com.example.myapplication.utils.JNEditTextBold
                    android:id="@+id/et_password2"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="123456">
                </com.example.myapplication.utils.JNEditTextBold>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ll_terms_and_conditions"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password2">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:checked="false">
                </androidx.appcompat.widget.AppCompatCheckBox>
                <com.example.myapplication.utils.JNTextViewMedium
                    android:id="@+id/tv_terms_and_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/txt_terms_and_conditions_marginStart"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size">
                </com.example.myapplication.utils.JNTextViewMedium>
            </LinearLayout>
            <com.example.myapplication.utils.JNButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size"
                app:layout_constraintTop_toBottomOf="@id/ll_terms_and_conditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </com.example.myapplication.utils.JNButton>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register">

                <com.example.myapplication.utils.JNTextViewMedium
                    android:id="@+id/tv_existing_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/existing_account"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/lbl_text_view_text_size">
                </com.example.myapplication.utils.JNTextViewMedium>

                <com.example.myapplication.utils.JNTextViewMedium
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDarkText"
                    android:textSize="@dimen/lbl_text_view_text_size"></com.example.myapplication.utils.JNTextViewMedium>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>